SimulationProject/yaml/simbackend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simbackend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simbackend
  template:
    metadata:
      labels:
        app: simbackend
    spec:
      containers:
      - name: simbackend
        image: eleni88/simulation-app:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"  
        ports:
        - containerPort: 5000
