SimulationProject/yaml/simbackend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simbackend
  namespace: default
spec:
  selector:
    app: simbackend
  ports:
  - port: 80
    targetPort: 5000
